--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" style="padding-right: 50px;" id="navbarCollapse">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active" id="top-menu" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#learn">Learn</a>
