Added new Scroll Feature Animation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="javascript.js"></script>
+    <script src="javascript2.js"></script>
     <!-- Favicons -->
 <meta name="theme-color" content="#563d7c">
 
@@ -54,32 +55,32 @@
   <body>
     <header>
   <nav class="navbar navbar-expand-md fixed-top naveffect" style="padding: 0px; font-weight: bold; font-family: monospace; font-size: 18px;">
-    <a class="navbar-brand" href="#" style="font-size:24px; margin-left: 20px;"><img src="logo.png" style="padding-right: 20px;" height=60px">S P A R K</a>
+    <a class="navbar-brand" href="#" style="font-size:24px; margin-left: 20px;"><img src="logo.png" style="padding-right: 20px;height:60px">S P A R K</a>
     <button class="navbar-toggler bg-grey navbar-dark" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" style="padding-right: 50px;" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" id="top-menu" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link activated top-menu" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#learn">Learn</a>
+          <a class="nav-link next-menu-1" href="#learn">Learn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#music">Music</a>
+          <a class="nav-link next-menu-2" href="#music">Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#video">Video</a>
+          <a class="nav-link next-menu-3" href="#video">Video</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#news">News & Sports</a>
+          <a class="nav-link next-menu-4" href="#news">News & Sports</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about-us">About Us</a>
+          <a class="nav-link next-menu-5" href="#about-us">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link next-menu-6" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
