Updated Mathsn Hard Quiz Link & Alert Message for English

--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
 			<h1> THE MATH QUIZ </h1>
 			<button class="button" onClick="parent.open('https://forms.gle/ijYAP2sk3JrSvxXC9')"><span>Easy </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/A3dkWNBYDzn77APi6')"><span>Medium </span></button>
-			<button class="button" onClick="parent.open('https://www.google.com/')"><span>Hard </span></button>
+			<button class="button" onClick="parent.open('https://forms.gle/BX9AGHJtjKCR51Rz9')"><span>Hard </span></button>
 		</div>
 		<div class="sub" id="sci">
 			<h1> THE SCIENCE QUIZ </h1>
@@ -67,9 +67,9 @@
 		</div>
 		<div class="sub" id="eng">
 			<h1> THE ENGLISH QUIZ </h1>
-			<button class="button" onClick="parent.open('https://www.google.com/')"><span>Easy </span></button>
-			<button class="button" onClick="parent.open('https://www.google.com/')"><span>Medium </span></button>
-			<button class="button" onClick="parent.open('https://www.google.com/')"><span>Hard </span></button>
+			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')")><span>Easy </span></button>
+			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Medium </span></button>
+			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Hard </span></button>
 		</div>
 		<div class="sub" id="gk">
 			<h1> THE G.K. QUIZ </h1>
