Update - English Easy Quiz

--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
 		</div>
 		<div class="sub" id="eng">
 			<h1> THE ENGLISH QUIZ </h1>
-			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')")><span>Easy </span></button>
+			<button class="button" onClick="parent.open('https://forms.gle/9hstoGmCztXqVfkN6')")><span>Easy </span></button>
 			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Medium </span></button>
 			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Hard </span></button>
 		</div>
