--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="stylehome.css">
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
 		<script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
 		<script src="js/bootstrap.bundle.min.js"></script>
@@ -28,6 +29,15 @@
 			}
 				.btn-lg,.btn-primary{
 				text-decoration: none!important;
+			}
+			h1,h2,p{
+				font-family: 'Josefin Sans' , sans-serif;
+			}
+			.text-capitalize{
+				font-weight: bold;
+			}
+			.btn-lg{
+				padding-top: 12px;
 			}
 			li{
 				padding-left: 20px;
@@ -138,17 +148,20 @@
 
 			<!-- Carosel Ends -->
 
-			<hr class="featurette-divider" id="learn" style="margin-top: 50px;">
+			<hr class="featurette-divider" id="learn">
 
 			<!-- Learn Section Begins -->
 
-			<div class="container marketing" style="padding-top: 30px;">
-
+			<div class="container marketing" >
+				<div class="container-fluid">
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Learn</h1>
+				<hr class="w-25 mx-auto pt-5">
+				</div>
 				<div class="row featurette" >
 				<div class="col-md-7 order-md-2">
 				<h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="index1.html" role="button">Visit Page &raquo;</a></p>
+				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="index1.html" role="button" style="padding-top: 12px;">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5 order-md-1">
 				<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
@@ -159,7 +172,11 @@
 
 			<!-- Music Section Begins -->
 
-			<div class="row featurette" style="padding-top: 20px;">
+			<div class="row featurette">
+				<div class="container-fluid">
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Music</h1>
+				<hr class="w-25 mx-auto pt-5">
+				</div>
 				<div class="col-md-7">
 				<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -174,7 +191,11 @@
 
 			<!-- Video Section Begins -->
 
-			<div class="row featurette" style="padding-top: 20px;">
+			<div class="row featurette">
+				<div class="container-fluid">
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Videos</h1>
+				<hr class="w-25 mx-auto pt-5">
+				</div>
 				<div class="col-md-7 order-md-2">
 				<h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -189,7 +210,11 @@
 
 			<!-- News Section Begins -->
 
-			<div class="row featurette" style="padding-top: 20px;">
+			<div class="row featurette">
+				<div class="container-fluid">
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">News & Sports</h1>
+				<hr class="w-25 mx-auto pt-5">
+				</div>
 				<div class="col-md-7">
 				<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Feature.</span></h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -204,12 +229,11 @@
 
 			<!-- About Section Begins -->
 
-			<div id="About Us" class="container-fluid" style="padding:0">
-				<section>
+			<div id="About Us" class="container-fluid">
 				<div class="container-fluid">
-				<h1 class="text-center text-capitalize pt-5">About us</h1>
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">About us</h1>
 				<hr class="w-25 mx-auto pt-5">
-				</section>
+				</div>
 				<div class="row col-xs-1 text-center">
 				<div class="col-lg-4 col-xs-1 text-center">
 				<svg style="margin-bottom: 20px;" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
@@ -252,7 +276,11 @@
 
 			<!-- Contact Section Begins -->
 
-			<div class="row featurette" style="padding-top: 20px;" >
+			<div class="row featurette">
+				<div class="container-fluid">
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Contact</h1>
+				<hr class="w-25 mx-auto pt-5">
+				</div>
 				<div class="col-md-7">
 				<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -273,7 +301,7 @@
 
 			<footer class="container">
 				<p class="float-right"><a href="#">Back to top</a></p>
-				<p>&copy; 2020, SPARK &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+				<p>Copyright &copy; 2020, S P A R K &middot;</a></p>
 			</footer>
 		</main>
 	</body>
