--- a/index2.html
+++ b/index2.html
@@ -11,6 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylehome.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
     <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
     <script src="js/bootstrap.bundle.min.js"></script>
@@ -22,7 +23,9 @@
 		a{
 			margin-right: 20px;
 			font-weight: bold;
-			font-family: sans-serif;
+		}
+		h1,h2,p{
+				font-family: 'Josefin Sans' , sans-serif!important;
 		}
 	</style>
 </head>
