--- a/tool.html
+++ b/tool.html
@@ -92,11 +92,11 @@
                         	<h2>G.K</h2>
                     	</div>
                         <ul>
-                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Topic 1</span></button></a>
-                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Topic 2</span></button></button></a>
-                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Topic 3</span></button></button></a>
-                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Topic 4</span></button></button></a>
-                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Topic 5</span></button></button></a>
+                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Notes')"><span>Topic 1</span></button></a>
+                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Notes')"><span>Topic 2</span></button></button></a>
+                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Notes')"><span>Topic 3</span></button></button></a>
+                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Notes')"><span>Topic 4</span></button></button></a>
+                            <a href="#"><button class="button" onclick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Notes')"><span>Topic 5</span></button></button></a>
                         </ul>
 
                     </div>
