Added Form for Contact Us

--- a/index.html
+++ b/index.html
@@ -281,14 +281,7 @@
 				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Contact</h1>
 				<hr class="w-25 mx-auto pt-5">
 				</div>
-				<div class="col-md-7">
-				<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="#" role="button">Visit Page &raquo;</a></p>
-				</div>
-				<div class="col-md-5">
-				<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-				</div>
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRXjsvCLOOaACdrXYhO3h_f6lPYaPPvnmAZs9DZaezaOXt6Q/viewform?embedded=true" height="920px" width="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 			</div>
 
 			<hr class="featurette-divider">
