--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 	<header>
-  <nav class="navbar navbar-expand-md fixed-top naveffect" style="padding: 0px; font-weight: bold; font-family: monospace; font-size: 18px;">
+  <nav class="navbar navbar-expand-md naveffect" style="padding: 0px; font-weight: bold; font-family: monospace; font-size: 18px;">
     <a class="navbar-brand" href="index.html" style="font-size:24px; margin-left: 50px;margin-top: 20px;"><img src="logo.png" style="padding-right: 20px;height:60px">S P A R K</a>
     <button class="navbar-toggler bg-grey navbar-dark" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
     </div>
   </nav>
 </header>
-	<h1 id="level" style="margin-top: 150px;"> Choose NOTES or QUIZ </h1>
+	<h1 id="level" style="margin-top: 80px;"> Choose NOTES or QUIZ </h1>
 	<div id="cont">
 		<button class="button" onclick="window.open('index2.html','_self')"><span>QUIZ </span></button>
 		<button class="button" onClick="window.open('tool.html','_self')"><span>NOTES </span></button>
