--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="index1.html" role="button" style="padding-top: 12px;">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5 order-md-1">
-				<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+				<img src="Learn2.jpg" height="450" width="450">
 				</div>
 			</div>
 
@@ -183,7 +183,7 @@
 				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="#" role="button">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5">
-				<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+				<img src="Music3.jpg" height="450" width="450">
 				</div>
 			</div>
 
