--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 				.btn-lg,.btn-primary{
 				text-decoration: none!important;
 			}
+			img{
+				object-fit: cover;
+			}
 			h1,h2,p{
 				font-family: 'Josefin Sans' , sans-serif;
 			}
