--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="index1.html" role="button" style="padding-top: 12px;">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5 order-md-1">
-				<img src="Learn2.jpg" height="100%" width="100%">
+				<img src="Learn2.jpg" height="400" width="400">
 				</div>
 			</div>
 
@@ -186,7 +186,7 @@
 				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="#" role="button">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5">
-				<img src="Music3.jpg" height="100%" width="100%">
+				<img src="Music3.jpg" height="400" width="400">
 				</div>
 			</div>
 
