Added Mobile Responsiveness for Quiz Page

--- a/index2.html
+++ b/index2.html
@@ -56,29 +56,39 @@
 </header>
 
 	<h1 id="level"> Choose the Difficulty Level and Take the Quiz </h1>
-		<div class="sub" id="math">
+	<div class="container">
+	<div class="left-col">
+    <div class="row mb-5">
+		<div class="col-lg-5 col-md-5 col-sm-11 col-12 sub" id="math">
 			<h1> THE MATH QUIZ </h1>
 			<button class="button" onClick="parent.open('https://forms.gle/ijYAP2sk3JrSvxXC9')"><span>Easy </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/A3dkWNBYDzn77APi6')"><span>Medium </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/BX9AGHJtjKCR51Rz9')"><span>Hard </span></button>
 		</div>
-		<div class="sub" id="sci">
+		<div class="col-lg-5 col-md-5 col-sm-11 col-12 sub" id="sci">
 			<h1> THE SCIENCE QUIZ </h1>
 			<button class="button" onClick="parent.open('https://forms.gle/yFrSsHyUdfbeDcTP7')"><span>Easy </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/1XKM9ucj1Tp12wPZ7')"><span>Medium </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/CE4W8Ky8azoYDwMc8')"><span>Hard </span></button>
 		</div>
-		<div class="sub" id="eng">
+		<div class="col-lg-5 col-md-5 col-sm-11 col-12 sub" id="eng">
 			<h1> THE ENGLISH QUIZ </h1>
 			<button class="button" onClick="parent.open('https://forms.gle/9hstoGmCztXqVfkN6')")><span>Easy </span></button>
 			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Medium </span></button>
 			<button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Hard </span></button>
 		</div>
-		<div class="sub" id="gk">
+		<div class="col-lg-5 col-md-5 col-sm-11 col-12 sub" id="gk">
 			<h1> THE G.K. QUIZ </h1>
 			<button class="button" onClick="parent.open('https://forms.gle/K2cywzDZXpTfpMLR7')"><span>Easy </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/EuC6A3yV98DJAsJXA')"><span>Medium </span></button>
 			<button class="button" onClick="parent.open('https://forms.gle/YkKHCxaGcQgKdW8w6')"><span>Hard </span></button>
 		</div>
+	</div>	
+	</div>
+	</div>
+	<div class="container">
+	<footer>
 	<p id="copyright">Copyright © 2020 S P A R K, Inc. All rights reserved.</p>
+	</footer>
+	</div>
 </body>
