Updated About and Contact Us

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 						<a class="nav-link next-menu-4" href="#news">News & Sports <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link next-menu-5" href="#about-us">About Us <span class="sr-only">(current)</span></a>
+						<a class="nav-link next-menu-5" href="#about-us">About <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-						<a class="nav-link next-menu-6" href="#contact">Contact <span class="sr-only">(current)</span></a>
+						<a class="nav-link next-menu-6" href="#contact">Contact Us <span class="sr-only">(current)</span></a>
 						</li>
 					</ul>
 				</div>
@@ -234,7 +234,7 @@
 
 			<div id="About Us" class="container-fluid">
 				<div class="container-fluid">
-				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">About us</h1>
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">About</h1>
 				<hr class="w-25 mx-auto pt-5">
 				</div>
 				<div class="row col-xs-1 text-center">
@@ -281,7 +281,7 @@
 
 			<div class="row featurette">
 				<div class="container-fluid">
-				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Contact</h1>
+				<h1 class="text-center text-capitalize pt-5" style="padding-top: 0px!important">Contact Us</h1>
 				<hr class="w-25 mx-auto pt-5">
 				</div>
 				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRXjsvCLOOaACdrXYhO3h_f6lPYaPPvnmAZs9DZaezaOXt6Q/viewform?embedded=true" height="940px" width="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
