--- a/index2.html
+++ b/index2.html
@@ -42,10 +42,10 @@
           <a class="nav-link activated next-menu-1" href="index1.html">Learn <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link next-menu-5" href="index.html#about-us">About Us <span class="sr-only">(current)</span></a>
+          <a class="nav-link next-menu-5" href="index.html#about-us">About <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link next-menu-6" href="index.html#contact">Contact <span class="sr-only">(current)</span></a>
+          <a class="nav-link next-menu-6" href="index.html#contact">Contact Us <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
