Added Mobile Responsiveness for Homepage

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<li data-target="#myCarousel" data-slide-to="2"></li>
 				</ol>
 				<div class="carousel-inner">
-				<div class="carousel-item active" style="height:700px;">
+				<div class="carousel-item active" style="height:720px;">
 				<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
 				<div class="container">
 				<div class="carousel-caption text-left">
@@ -120,7 +120,7 @@
 				</div>
 				</div>
 				</div>
-				<div class="carousel-item" style="height:700px;">
+				<div class="carousel-item" style="height:720px;">
 				<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
 				<div class="container">
 				<div class="carousel-caption">
@@ -129,7 +129,7 @@
 				</div>
 				</div>
 				</div>
-				<div class="carousel-item" style="height:700px;">
+				<div class="carousel-item" style="height:720px;">
 				<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
 				<div class="container">
 				<div class="carousel-caption text-left">
@@ -167,7 +167,7 @@
 				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="index1.html" role="button" style="padding-top: 12px;">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5 order-md-1">
-				<img src="Learn2.jpg" height="400" width="400">
+				<img src="Learn2.jpg" style="width: 100%;height: auto;">
 				</div>
 			</div>
 
@@ -186,7 +186,7 @@
 				<p style="margin-top: 20px;"><a class="btn-lg btn-primary" href="#" role="button">Visit Page &raquo;</a></p>
 				</div>
 				<div class="col-md-5">
-				<img src="Music3.jpg" height="400" width="400">
+				<img src="Music3.jpg" style="width: 100%;height: auto;">
 				</div>
 			</div>
 
