Added Mobile Responsiveness to Learn Portal

--- a/index1.html
+++ b/index1.html
@@ -50,10 +50,17 @@
     </div>
   </nav>
 </header>
-	<h1 id="level" style="margin-top: 80px;"> Choose NOTES or QUIZ </h1>
-	<div id="cont">
-		<button class="button" onclick="window.open('index2.html','_self')"><span>QUIZ </span></button>
-		<button class="button" onClick="window.open('tool.html','_self')"><span>NOTES </span></button>
-	</div>
+
+    <h1 id="level" style="margin-top: 80px;"> Choose NOTES or QUIZ </h1>
+  <div class="container">
+      <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+  		<button class="button" onclick="window.open('tool.html','_self')"><span>NOTES </span></button>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-12">
+  		<button class="button" onClick="window.open('index2.html','_self')"><span>QUIZ </span></button>
+      </div>
+      </div>
+  </div>
 	<p id="copyright">Copyright © 2020 SPARK, Inc. All rights reserved.</p>
 </body>
