--- a/tool.html
+++ b/tool.html
@@ -23,7 +23,7 @@
         }
         @media only screen and (max-width: 800px) {
 		 .justify-content-center{
-        	margin-left: 20%!important;
+        	margin-left: 15%;
         }
 		}
         
