Modified Font for Notes page and footer for Learn page

--- a/index1.html
+++ b/index1.html
@@ -63,5 +63,7 @@
       </div>
       </div>
   </div>
+  <div class="footer" style="position: relative;bottom: -100px">
 	<p id="copyright">Copyright © 2020 SPARK, Inc. All rights reserved.</p>
+</div>
 </body>
