--- a/tool.html
+++ b/tool.html
@@ -27,12 +27,11 @@
 		 .justify-content-center{
         	margin-left: 15%;
         }
-		}
         
     </style>
     </head>
     <body>
-        <header>
+        <header style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif!important;">
   <nav class="navbar navbar-expand-md naveffect" style="padding: 0px; font-weight: bold; font-family: monospace; font-size: 18px;">
     <a class="navbar-brand" href="index.html" style="font-size:24px; margin-left: 50px;margin-top: 20px;"><img src="logo.png" style="padding-right: 20px;height:60px">S P A R K</a>
     <button class="navbar-toggler bg-grey navbar-dark" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
