Fixed Notes Page

--- a/tool.html
+++ b/tool.html
@@ -20,14 +20,18 @@
     <link rel="stylesheet" href="s9.css">
 
     <style>
-        li{
-            padding-right: 20px;
-        }
         @media only screen and (max-width: 800px) {
 		 .justify-content-center{
         	margin-left: 15%;
+            }
+            li{
+            padding-right: 20px;
+            }
         }
-        
+        .col-lg-3 ul{
+            padding: 0px!important;
+            margin: 0px!important;
+        }
     </style>
     </head>
     <body>
