--- a/video.html
+++ b/video.html
@@ -2,17 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
     <link rel="shortcut icon" href="favicon.ico" />
 
-    <title>S P A R K : Videos</title>
+    <title>S P A R K : Video</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="video.css">
+    <link rel="stylesheet" type="text/css" href="stylehome.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')
+    </script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="video.css">
+    <style>
+        a {
+            margin-right: 20px;
+            font-weight: bold;
+        }
+        
+        h1,
+        h2,
+        p {
+            font-family: 'Josefin Sans', sans-serif!important;
+        }
+    </style>
 </head>
 
 <body>
