Updated Medium quiz of English

--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-5 col-md-5 col-sm-12 col-12 sub" id="eng">
                     <h1> THE ENGLISH QUIZ </h1>
                     <button class="button" onClick="parent.open('https://forms.gle/9hstoGmCztXqVfkN6')" )><span>Easy </span></button>
-                    <button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Medium </span></button>
+                    <button class="button" onClick="parent.open('https://forms.gle/4XPX9uCUQSRFoJik8')"><span>Medium </span></button>
                     <button class="button" onClick="alert('The Developer has Still Not Updated The Link. Kindly Try Other Quizes')"><span>Hard </span></button>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-12 col-12 sub" id="gk">
