--- a/tool.html
+++ b/tool.html
@@ -20,6 +20,14 @@
     <link rel="stylesheet" href="s9.css">
 
     <style>
+    	.button {
+		    font-family: 'Josefin Sans', sans-serif!important;
+		}
+
+		h1,h2{
+		    font-family: 'Josefin Sans', sans-serif!important;
+		}
+
         @media only screen and (max-width: 800px) {
 		 .justify-content-center{
         	margin-left: 15%;
