--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@
 
             </div>
 
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRXjsvCLOOaACdrXYhO3h_f6lPYaPPvnmAZs9DZaezaOXt6Q/viewform?embedded=true" frameborder="0" style="overflow: hidden; height: 1440px;
+            width: 100%;"></iframe>
+
             <hr class="featurette-divider">
 
             <!-- /END  OF THE FEATURES -->
