Fixed position of &cpy; in index2.html

--- a/index2.html
+++ b/index2.html
@@ -89,9 +89,5 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <footer>
-            <p id="copyright">Copyright © 2020 S P A R K, Inc. All rights reserved.</p>
-        </footer>
-    </div>
+    <p id="copyright" style="position: relative;bottom: -50px">Copyright © 2020 SPARK, Inc. All rights reserved.</p>
 </body>
