Fixed Footer font fot tool.html

--- a/tool.html
+++ b/tool.html
@@ -24,7 +24,7 @@
 		    font-family: 'Josefin Sans', sans-serif!important;
 		}
 
-		h1,h2{
+		.footer, p,h1,h2{
 		    font-family: 'Josefin Sans', sans-serif!important;
 		}
 
