--- a/tool.html
+++ b/tool.html
@@ -28,6 +28,10 @@
 		    font-family: 'Josefin Sans', sans-serif!important;
 		}
 
+        li {
+            padding-right: 20px;
+        }
+
         @media only screen and (max-width: 800px) {
 		 .justify-content-center{
         	margin-left: 15%;
