Updates Committed 2:43PM 30/05/2020

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             padding: 0px!important;
         }
 
+        nav{
+            padding-top: 5px!important;
+            padding-bottom: 10px!important;
+        }
+
         .btn-lg,
         .btn-primary {
             text-decoration: none!important;
